--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,7 +6,7 @@
 
     <color name="colorPrimary">#607D8B</color>
     <color name="colorPrimaryDark">#455A64</color>
-    <color name="colorAccent">#F5A623</color>
+    <color name="colorAccent">#f5a623</color>
     <color name="lightGrey">#EFEFEF</color>
     <color name="darkGrey">#979797</color>
     <color name="notFavourite">#AAA9A9</color>
