--- a/app/src/main/res/drawable/button_white_borders.xml
+++ b/app/src/main/res/drawable/button_white_borders.xml
@@ -2,5 +2,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
     <corners android:radius="4dp"/>
     <padding android:left="0dp" android:right="0dp" android:top="0dp" android:bottom="0dp"/>
-    <stroke android:width="1dp" android:color="#ffffff"/>
+    <stroke android:width="1dp" android:color="#F9CD85"/>
 </shape>
