--- a/app/src/main/res/layout/activity_product.xml
+++ b/app/src/main/res/layout/activity_product.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -22,7 +22,8 @@
             android:paddingLeft="10dp"
             android:paddingRight="10dp"
             tools:layout_editor_absoluteX="8dp"
-            tools:layout_editor_absoluteY="8dp">
+            tools:layout_editor_absoluteY="8dp"
+            android:animateLayoutChanges="true">
 
             <ImageView
                 android:id="@+id/productImage"
@@ -53,8 +54,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="34dp"
-                android:text="TextView"
-                android:textColor="#772100" />
+                android:text="Limited Avaliability"
+                android:textColor="#772100"
+                android:visibility="invisible" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -100,7 +102,7 @@
                 android:paddingLeft="35dp"
                 android:paddingRight="35dp"
                 android:paddingTop="5dp"
-                android:text="TextView" />
+                android:visibility="invisible" />
 
 
             <TextView
@@ -153,8 +155,6 @@
             </android.support.v4.view.ViewPager>
 
 
-
-
         </LinearLayout>
 
     </ScrollView>
@@ -185,7 +185,7 @@
                 android:id="@+id/fabtoolbar_fab"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/abc_ic_menu_share_mtrl_alpha"
+                android:src="@drawable/ic_add_to_cart"
                 app:elevation="5dp"
                 app:fabSize="normal" />
 
@@ -194,13 +194,13 @@
         <LinearLayout
             android:id="@+id/fabtoolbar_toolbar"
             android:layout_width="match_parent"
-            android:layout_height="160dp"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentStart="true"
+            android:layout_height="wrap_content"
             android:orientation="vertical"
             android:paddingLeft="25dp"
             android:paddingRight="25dp"
-            android:paddingTop="15dp">
+            android:paddingTop="15dp"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentStart="true">
 
             <TextView
                 android:id="@+id/nameLabel2"
@@ -214,32 +214,35 @@
                 android:textStyle="bold" />
 
             <LinearLayout
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="10dp"
+                android:layout_marginBottom="5dp"
                 android:layout_weight="1"
                 android:gravity="left|center_vertical"
                 android:orientation="horizontal">
 
                 <TextView
                     android:id="@+id/priceLabel2"
+                    android:layout_width="200dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="20dp"
+                    android:layout_weight="1.07"
+                    android:text="TextView"
+                    android:textColor="?attr/colorPrimary"
+                    android:textSize="30sp"
+                    android:textStyle="bold" />
+
+                <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginRight="20dp"
-                    android:layout_weight="1"
-                    android:text="TextView" />
-
-                <LinearLayout
-                    android:layout_width="20dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginRight="30dp"
-                    android:layout_weight="1"
+                    android:layout_weight="0.55"
                     android:orientation="horizontal">
 
                     <Button
                         android:id="@+id/minusButton"
-                        android:layout_width="40dp"
-                        android:layout_height="40dp"
+                        android:layout_width="34dp"
+                        android:layout_height="30dp"
                         android:layout_weight="1"
                         android:background="@drawable/button_white_borders"
                         android:text="-"
@@ -256,12 +259,13 @@
                         android:text="1"
                         android:textAlignment="center"
                         android:textColor="@android:color/white"
+                        android:textSize="20sp"
                         android:textStyle="bold" />
 
                     <Button
                         android:id="@+id/plusButton"
-                        android:layout_width="40dp"
-                        android:layout_height="40dp"
+                        android:layout_width="34dp"
+                        android:layout_height="30dp"
                         android:layout_weight="1"
                         android:background="@drawable/button_white_borders"
                         android:text="+"
@@ -274,35 +278,47 @@
             </LinearLayout>
 
             <LinearLayout
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:gravity="center"
                 android:orientation="horizontal">
 
+                <Space
+                    android:layout_width="110dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1" />
+
                 <Button
                     android:id="@+id/cancelButton"
-                    android:layout_width="100dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:background="@android:color/transparent"
                     android:text="Cancel"
                     android:textAlignment="center"
-                    android:textColor="@color/colorPrimary" />
+                    android:textColor="@color/colorPrimary"
+                    android:textSize="16sp" />
+
+                <Space
+                    android:layout_width="10dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1" />
 
                 <Button
                     android:id="@+id/addToCartButton"
-                    android:layout_width="100dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:background="@android:color/transparent"
                     android:text="Add to Cart"
                     android:textAlignment="center"
-                    android:textColor="@color/colorPrimary" />
+                    android:textColor="@color/colorPrimary"
+                    android:textSize="16sp" />
             </LinearLayout>
 
         </LinearLayout>
 
     </com.github.fafaldo.fabtoolbar.widget.FABToolbarLayout>
 
-</LinearLayout>
+</android.support.design.widget.CoordinatorLayout>
