--- a/app/src/main/res/layout/activity_product.xml
+++ b/app/src/main/res/layout/activity_product.xml
@@ -102,7 +102,8 @@
                 android:paddingLeft="35dp"
                 android:paddingRight="35dp"
                 android:paddingTop="5dp"
-                android:visibility="invisible" />
+                android:text="loading..."
+                android:visibility="visible" />
 
 
             <TextView
