--- a/app/src/main/res/layout/card_search_result.xml
+++ b/app/src/main/res/layout/card_search_result.xml
@@ -39,7 +39,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="15dp"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:paddingRight="16dp">
 
                 <TextView
                     android:id="@+id/productTitle"
