--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -22,7 +22,7 @@
             android:id="@+id/wld_toolbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="?attr/colorAccent"
+            android:background="@color/colorSuperAccent"
             android:elevation="24dp"
             android:minHeight="?attr/actionBarSize">
 
@@ -32,7 +32,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="5dp"
                 android:text="0"
-                android:textColor="@color/cardview_light_background"
+                android:textColor="@android:color/black"
                 android:textSize="18sp"
                 android:textStyle="bold" />
 
@@ -42,7 +42,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="25dp"
                 android:text="results"
-                android:textColor="@android:color/background_light"
+                android:textColor="@android:color/black"
                 android:textSize="18sp" />
 
             <Spinner
