--- a/app/src/main/res/drawable/card_cart_background.xml
+++ b/app/src/main/res/drawable/card_cart_background.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
-        <shape android:shape="line">
+        <shape android:shape="rectangle">
             <stroke android:width="1dp" android:color="#d4d4d4" />
         </shape>
     </item>
