--- a/app/src/main/res/layout/card_cart.xml
+++ b/app/src/main/res/layout/card_cart.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="210dp"
+    android:layout_height="170dp"
     android:orientation="horizontal"
     android:paddingLeft="15dp"
     android:paddingRight="15dp"
@@ -16,12 +15,12 @@
         android:layout_weight="0.3"
         android:src="@drawable/googleg_standard_color_18"/>
 
-    <android.support.constraint.ConstraintLayout
+    <RelativeLayout
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="0.7"
         android:paddingTop="15dp"
-        android:paddingBottom="15dp"
+        android:paddingBottom="10dp"
         android:paddingStart="15dp"
         android:paddingEnd="0dp">
 
@@ -29,9 +28,7 @@
             android:id="@+id/cart_item_header"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintLeft_toRightOf="parent">
+            android:orientation="vertical">
 
             <TextView
                 android:id="@+id/cart_item_name"
@@ -71,8 +68,7 @@
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:layout_marginTop="15dp"
-            app:layout_constraintTop_toBottomOf="@+id/cart_item_header"
-            app:layout_constraintLeft_toRightOf="parent">
+            android:layout_below="@id/cart_item_header">
 
             <TextView
                 android:layout_width="wrap_content"
@@ -90,17 +86,38 @@
 
         </LinearLayout>
 
-        <android.support.v7.widget.CardView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintBottom_toTopOf="parent"
-            app:layout_constraintRight_toLeftOf="parent">
+        <!--android.support.v7.widget.CardView
+            android:layout_width="120dp"
+            android:layout_height="30dp"
+            android:elevation="8dp"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentEnd="true">
+
             <Button
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:background="#ed5151"
                 android:text="REMOVE"
-                android:textColor="#FFF"
-                android:background="#ed5151"/>
+                android:textColor="#FFF" />
+        </android.support.v7.widget.CardView-->
+
+        <android.support.v7.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginStart="90dp"
+            android:layout_marginTop="115dp"
+            android:layout_marginBottom="5dp"
+            android:elevation="8dp">
+
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="#ed5151"
+                android:text="REMOVE"
+                android:textColor="#FFF" />
         </android.support.v7.widget.CardView>
-    </android.support.constraint.ConstraintLayout>
+
+    </RelativeLayout>
 </LinearLayout>
