--- a/app/src/main/res/drawable/card_cart_background.xml
+++ b/app/src/main/res/drawable/card_cart_background.xml
@@ -9,6 +9,7 @@
     <item android:top="1dp" android:bottom="1dp">
         <shape android:shape="rectangle">
             <stroke android:width="1dp" android:color="#FFF" />
+            <solid android:color="#FFF" />
         </shape>
     </item>
 </layer-list>
