--- a/app/src/main/res/layout/card_suggestion_result.xml
+++ b/app/src/main/res/layout/card_suggestion_result.xml
@@ -20,7 +20,7 @@
             android:paddingBottom="10dp"
             android:paddingTop="10dp"
             android:scaleType="center"
-            app:srcCompat="@android:drawable/ic_menu_recent_history" />
+            app:srcCompat="@drawable/ic_recent_search_black_24dp" />
 
         <TextView
             android:id="@+id/suggestion"
