--- a/app/src/main/res/layout/description_fragment.xml
+++ b/app/src/main/res/layout/description_fragment.xml
@@ -7,7 +7,10 @@
         android:id="@+id/productDescription"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
         android:text="TextView"
-        android:textSize="30sp"
-        android:textStyle="bold" />
+        android:textColor="@color/searchProductLabel"
+        android:textSize="18sp" />
 </LinearLayout>
