Placeholder for order again

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,7 +6,7 @@
     <color name="colorFavourite">#EA5455</color>
     <color name="colorSuperAccent">#ffd460</color>
     <color name="colorInactive">#AAA9A9</color>
-    <color name="colorPlaceholder">#D5D5D5</color>
+    <color name="colorPlaceholder">#C5C5C3</color>
 
     <!--<color name="colorPrimary">#607D8B</color>-->
     <!--<color name="colorPrimaryDark">#455A64</color>-->
