--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -24,8 +24,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="12dp"
-                android:text="Discover"
-                android:textAllCaps="true" />
+                android:text="Discover" />
 
             <HorizontalScrollView
                 android:layout_width="match_parent"
@@ -45,7 +44,7 @@
                         android:clickable="true"
                         android:horizontalSpacing="10dp"
                         android:scrollbars="none"
-                        android:smoothScrollbar="false"></GridView>
+                        android:smoothScrollbar="false" ></GridView>
 
                 </LinearLayout>
 
@@ -56,8 +55,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="12dp"
-                android:text="Order Again"
-                android:textAllCaps="true" />
+                android:text="Order Again"/>
 
             <HorizontalScrollView
                 android:layout_width="match_parent"
@@ -77,7 +75,36 @@
                         android:clickable="true"
                         android:horizontalSpacing="10dp"
                         android:scrollbars="none"
-                        android:smoothScrollbar="false"></GridView>
+                        android:smoothScrollbar="false" />
+
+                    <LinearLayout
+                        android:id="@+id/empty_oa_view"
+                        android:layout_width="360dp"
+                        android:layout_height="170dp"
+                        android:orientation="vertical">
+
+                        <ImageView
+                            android:id="@+id/orderAgainEmptyIcon"
+                            android:layout_width="match_parent"
+                            android:layout_height="100dp"
+                            android:layout_gravity="center"
+                            android:layout_marginBottom="15dp"
+                            android:layout_marginTop="10dp"
+                            android:layout_weight="1"
+                            app:srcCompat="@drawable/ic_recent_search_gray_24dp" />
+
+                        <TextView
+                            android:id="@+id/textView"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:layout_weight="1"
+                            android:text="Products you purchased before will appear here"
+                            android:textAlignment="center"
+                            android:textColor="@color/colorPlaceholder"
+                            android:textStyle="bold" />
+
+                    </LinearLayout>
 
                 </LinearLayout>
 
@@ -88,8 +115,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="12dp"
-                android:text="Favourites"
-                android:textAllCaps="true" />
+                android:text="Favourites" />
 
             <HorizontalScrollView
                 android:layout_width="match_parent"
