--- a/app/src/main/res/layout/card_cart.xml
+++ b/app/src/main/res/layout/card_cart.xml
@@ -10,6 +10,7 @@
     android:background="@drawable/card_cart_background">
 
     <ImageView
+        android:id="@+id/cart_image"
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="0.3"
@@ -38,6 +39,8 @@
                 android:textSize="18sp"
                 android:textColor="#4d4d4d"
                 android:layout_marginBottom="3dp"
+                android:ellipsize="end"
+                android:maxLines="1"
                 android:text="The drink" />
 
             <TextView
@@ -97,6 +100,7 @@
             android:elevation="8dp">
 
             <Button
+                android:id="@+id/cart_remove"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="#ed5151"
